<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_search_black_18dp"
        app:showAsAction="ifRoom"
        android:title="Search">
    </item>
    <item
        android:id="@+id/menu_activity_main_more"
        android:icon="@drawable/baseline_more_vert_black_18dp"
        app:showAsAction="ifRoom"
        android:title="More">

        <menu>
            <item
                android:id="@+id/menu_activity_main_notifications"
                android:title="Notifications"
                app:showAsAction="ifRoom">
            </item>

            <item
                android:title="Help"
                app:showAsAction="ifRoom">
            </item>

            <item
                android:title="About">
                app:showAsAction="ifRoom"
            </item>
        </menu>
        
    </item>
</menu>