<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/activity_main_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:tabMode="scrollable"/>

        </ScrollView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/activity_main_pager_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_main_nav_header"
        app:menu="@menu/activity_main_menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>