<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_news_recycler_view_articles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>