...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

    <EditText
        android:id="@+id/activity_search_text_input_begin_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="Begin Date"
        android:clickable="true"
...
